# browser_tabs

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  STRUCTURE.md  TASK_11_IMPLEMENTATION.md
.kiro/specs/web-page-manager/: design.md  requirements.md  tasks.md
ai-processor/: CMakeLists.txt
ai-processor-ffi/: Cargo.toml
ai-processor-ffi/src/: lib.rs
ai-processor-ffi/tests/: property_tests.rs
ai-processor/include/: ai_processor.h  content_analyzer.h  group_suggester.h  similarity_calculator.h
ai-processor/src/: ai_processor.cpp  content_analyzer.cpp  group_suggester.cpp  similarity_calculator.cpp
browser-connector/: Cargo.toml
browser-connector/src/: bookmark_content_analyzer.rs  bookmark_import.rs  cdp.rs  firefox.rs  lib.rs  privacy_filter.rs  tab_extractor.rs  tab_monitor.rs  traits.rs
browser-connector/tests/: property_tests.rs
core/: Cargo.toml
core/src/: errors.rs  ffi.rs  lib.rs  types.rs
core/tests/: property_tests.rs
data-access/: Cargo.toml
data-access/src/: batch.rs  cache.rs  lib.rs  repository.rs  schema.rs
data-access/tests/: property_tests.rs
flutter_bridge/: Cargo.toml
flutter_bridge/src/api/: browser.rs  mod.rs  page.rs  search.rs  simple.rs
flutter_ui/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter_ui/integration_test/: simple_test.dart
flutter_ui/lib/: app.dart  main.dart
flutter_ui/lib/models/: page_info.dart  performance_metrics.dart  search_result.dart  smart_group.dart
flutter_ui/lib/providers/: page_provider.dart  search_provider.dart  settings_provider.dart
flutter_ui/lib/screens/: bookmarks_screen.dart  history_screen.dart  home_screen.dart  performance_screen.dart  search_screen.dart  settings_screen.dart  tabs_screen.dart
flutter_ui/lib/services/: hotkey_service.dart  notification_service.dart  rust_bridge.dart  system_tray_service.dart
flutter_ui/lib/src/rust/: frb_generated.dart
flutter_ui/lib/theme/: app_theme.dart
flutter_ui/lib/widgets/: browser_filter_chips.dart  group_card.dart  page_list_tile.dart  search_result_tile.dart  stats_card.dart
flutter_ui/rust_builder/: pubspec.yaml
flutter_ui/rust_builder/android/: build.gradle  settings.gradle
flutter_ui/rust_builder/android/src/main/: AndroidManifest.xml
flutter_ui/rust_builder/ios/: rust_lib_web_page_manager_ui.podspec
flutter_ui/rust_builder/linux/: CMakeLists.txt
flutter_ui/rust_builder/macos/: rust_lib_web_page_manager_ui.podspec
flutter_ui/rust_builder/windows/: CMakeLists.txt
flutter_ui/windows/: CMakeLists.txt
flutter_ui/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter_ui/windows/runner/: Runner.rc  main.cpp
integration/: Cargo.toml
integration/src/: application.rs  error_handler.rs  lib.rs  logger.rs
integration/tests/: integration_tests.rs  performance_benchmarks.rs
page-manager/: Cargo.toml
page-manager/src/: change_detector.rs  content_archiver.rs  history.rs  lib.rs  matcher.rs  remote_controller.rs  search.rs  sync.rs  unified_manager.rs
page-manager/tests/: property_tests.rs
ui-ffi-common/: Cargo.toml
ui-ffi-common/src/: global.rs  lib.rs  search.rs
ui-manager/: Cargo.toml
ui-manager/src/: flutter.rs  lib.rs  performance_monitor.rs  system_integration.rs  traits.rs
ui-manager/src/native/: gtk.rs  mod.rs  qt.rs  winui.rs
