[package]
name = "ai-processor-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
web-page-manager-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# FFI support
libc = "0.2"

[lib]
name = "ai_processor_ffi"
crate-type = ["cdylib", "rlib"]