[package]
name = "browser-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
web-page-manager-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# HTTP client for browser communication (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket for CDP
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Async traits
async-trait = "0.1"

# URL encoding for CDP API calls
urlencoding = "2.1"

# URL parsing for tab extraction
url = "2.5"

# Platform-specific directory paths
dirs = "5.0"

# SQLite for Firefox bookmark parsing
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
proptest = "1.4"
